--- a/basejson/build.gradle
+++ b/basejson/build.gradle
@@ -4,9 +4,10 @@ android {
 
     defaultConfig {
         minSdkVersion 14
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 30
-        versionCode 11
-        versionName "1.1.1"
+        versionCode 12
+        versionName "1.1.2"
     }
 
     buildTypes {
